--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -2,7 +2,7 @@
     package="com.cloudukatechnologies.clouduka">
     <uses-permission android:name="android.permission.INTERNET"/>
    <application
-        android:label="clouduka"
+        android:label="Clouduka"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
