--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,7 +29,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   page_transition:
-  carousel_slider:
+  #webview_flutter:
+  flutter_webview_plugin:
+  lottie:
+  swipedetector:
 
 dev_dependencies:
   flutter_test:
@@ -49,14 +52,9 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/images/loading.json
-    - assets/images/electronics.png
     - assets/images/cd.jpg
-    - assets/images/menu.png
-    - assets/images/pot.png
-    - assets/images/makeup.png
-    - assets/images/fashion.png
-    - assets/images/toys.png
     - assets/images/logo.png
+
   #   - images/a_dot_ham.jpeg
 
   # An image asset can refer to one or more resolution-specific "variants", see
